--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,11 +7,13 @@ body {
 }
 
 canvas {
-  margin: 50;
+  margin: 25px;
+  margin-left: 50px;
 }
 
 h1 {
   width: 1000px;
+  margin: 20px;
   margin-left: 450px;
   margin-top: 50px;
   font-size: 40pt;
