--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,44 +1,55 @@
-body {
-  font-family: sans-serif;
+div {
+  margin: auto;
+  display: inline-block;
+  position: relative;
+  text-align: center;
   width: 100%;
-  height: 100%;
-  background-color: black;
-  color: white;
+}
+
+body {
+  font-family: 'Josefin Slab', serif;
+  background-image: url('../img/Road_with_Grass_PNG_Clipart.png');
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: bottom;
+  color: black;
 }
 
 canvas {
-  margin: 25px;
-  margin-left: 50px;
+  margin: 25px auto;
+  position: relative;
+  display: block;
+}
+
+.logo {
+  display: block;
+  margin-top: 15px;
+
 }
 
 h1 {
-  width: 1000px;
-  margin: 20px;
-  margin-left: 450px;
-  margin-top: 50px;
-  font-size: 40pt;
-}
-
-.directions {
-  margin-left: 375px;
   display: inline;
-  animation-duration: 10s;
-}
-
-#win {
-  margin-left: 485px;
-  display: inline;
-  color: black;
-  animation-duration: 10s;
-  font-size: 20pt;
+  margin-top: 25px;
+  margin-left: -300px;
+  font-size: 36pt;
+  text-align: center;
+  width: 100%;
 }
 
 button {
-  margin: 10px;
+  font-family: 'Josefin Slab', serif;
   display: inline;
+  margin-top: 0;
+  margin-left: -300px;
   border-radius: 10px;
-  padding: 5px;
-  animation: blink 1s infinite;
+  padding: 10px;
+  font-size: 20pt;
+}
+
+img {
+  float:left;
+  width: 100px;
+  display: inline;
 }
 
 @keyframes blink {
@@ -52,4 +63,50 @@ button {
   70%  {color: aqua;}
   80%  {color: hotpink;}
   90%  {color: lime;}
+}
+
+.bubble{
+    background-color: #F2F2F2;
+    border-radius: 25px;
+    box-shadow: 0 0 6px #B2B2B2;
+    display: inline-block;
+    padding: 10px 18px;
+    position: relative;
+    vertical-align: top;
+    width: 100px;
+}
+
+.bubble::before {
+    background-color: #F2F2F2;
+    border-radius: 0px;
+    content: "\00a0";
+    display: block;
+    /*height: 16px;*/
+    position: absolute;
+    top: 17px;
+    transform:             rotate( 29deg ) skew( -35deg );
+        -moz-transform:    rotate( 29deg ) skew( -35deg );
+        -ms-transform:     rotate( 29deg ) skew( -35deg );
+        -o-transform:      rotate( 29deg ) skew( -35deg );
+        -webkit-transform: rotate( 29deg ) skew( -35deg );
+    width:  20px;
+}
+
+.me {
+  float:left;
+
+    margin: 5px 45px 5px 20px;
+}
+
+.me::before {
+    box-shadow: -2px 2px 2px 0 rgba( 178, 178, 178, .4 );
+    left: -9px;
+}
+
+.directions {
+  margin: inherit auto;
+  display: block;
+  position: relative;
+  font-weight: bold;
+  font-size: 20pt;
 }
